--- a/SC_GBK/cc_cansnow_eacpay/template/recharge.htm
+++ b/SC_GBK/cc_cansnow_eacpay/template/recharge.htm
@@ -183,7 +183,7 @@
                     <td>
                         <!--{$value['amount']}-->
                     </td>
-                    <td>
+                    <td class="status_<!--{$value['status']}-->" data-orderid="<!--{$value['order_id']}-->" data-eac="<!--{$value['eac']}-->">
                         <!--{$statusArr[$value['status']]}-->
                     </td>
                 </tr>
@@ -193,7 +193,7 @@
     </div>
     
     
-	<div id="eacpaylayer" style="position: absolute;position: fixed;top: 50%;left: 50%;width: 630px;height: 360px;background: #fff;margin: -180px -300px;box-shadow: #87858570 0px 0px 0px 8px;z-index: 999;padding:10px;" class="flex_row">
+	<div id="eacpaylayer" style="position: absolute;position: fixed;top: 50%;left: 50%;width: 630px;height: 360px;background: #fff;margin: -180px -300px;box-shadow: #87858570 0px 0px 0px 8px;z-index: 999;padding:10px;display:none;" class="flex_row">
 		<div class="flex_1">
 			<div id="qrcode" style="text-align: center;">
 				<div style="text-align: center;margin: 30px auto;border-color: #f00;">
@@ -226,33 +226,6 @@
             return isNaN(s) ? 0 : s;
         }
 
-        function conversion(id) {
-            var money_r = $("#exchangeamount").val();
-            var money_e = $("#eacamount").val();
-            var money_r_rate = $("#money_r_rate").text(); //1eac==0.0015rmb
-            if (money_r || money_e) {
-
-                if (id == "money_r") {
-                    // console.log((money_r+money_e_rate));
-                    $("#money_e").val((money_r / money_r_rate).toFixed(3));
-                } else if (id == "money_e") {
-                    $("#money_r").val((money_e * money_r_rate).toFixed(5));
-                }
-            }
-            if ($("#affirm_div").is(':visible')) {
-                alert("为保证充值成功,请等待上一笔充值完成,再进行下一笔充值,谢谢");
-            } else {
-                if (money_r_rate) {
-                    makeCode();
-                } else {
-                    mui.alert("请等待即时行情价加载~在进行充值", function() {
-                        $("#money_e").val("");
-                        $("#money_r").val("");
-                    });
-                }
-            }
-        }
-
         function exchangecalcredit() {
             jQuery('#exchangeamount').val(jQuery('#exchangeamount').val().toInt());
             if (jQuery('#exchangeamount').val() != 0) {
@@ -279,7 +252,7 @@
                 if (d.code == "1") {
                     clearInterval(timeId);
                     jQuery('#eacpayresult .loading .bar').css('width','100%');
-                    $('#eacpayresult .resultmsg').html("充值成功");
+                    jQuery('#eacpayresult .resultmsg').html("充值成功");
                     setTimeout(function() {
                         location.reload();
                     }, 2000);
@@ -302,10 +275,14 @@
 
         function submitform() {
             var amount = parseInt(jQuery('#exchangeamount').val());
-            if(amount == 0){
+            if(amount <= 0){
                 alert('充值金额必须大于0');
             }
-            jQuery.getJSON('plugin.php?id=cc_cansnow_eacpay:recharge&action=geteac&submit=1&amount=' + jQuery('#exchangeamount').val(), function(d) {
+            jQuery.getJSON('plugin.php?id=cc_cansnow_eacpay:recharge&action=geteac&submit=1&amount=' + amount, function(d) {
+                if(d.msg){
+                    alert(d.msg);
+                    return ;
+                }
                 order = d;
                 jQuery('#exchangeData').text(d.exchange + "{$bizhong}");
                 jQuery('#eacamount').text(d.eacamount);
@@ -319,6 +296,15 @@
                 timeId = setInterval(check, 3000); //开始任务
             });
         }
+        jQuery('.status_wait').on('click',function(){
+            if(!timeId){
+                order.orderid = jQuery(this).data('orderid');
+                order.eac = jQuery(this).data('eac');
+                jQuery('#qrcode .img').attr('src','plugin.php?id=cc_cansnow_eacpay:recharge&action=qrcode&eac='+order.eac+'&orderid='+order.orderid);
+                jQuery('#eacpaylayer').show();
+                timeId = setInterval(check, 3000);
+            }
+        })
     </script>
 </div>
 <!--{if $_G['inajax']}-->
