--- a/EN_UTF8/cc_cansnow_eacpay/template/help.htm
+++ b/EN_UTF8/cc_cansnow_eacpay/template/help.htm
@@ -1,5 +1,32 @@
-<p>
-    奥术大师大Sgas董鹏飞hi奥十多个iouwhfu89ashuf8euu
-</p>
+<p>< H1 > 1. Introduction to eacpay < / H1 ></p>
+Eacpay is a payment application based on earthcoin blockchain. Currently, it supports discuz, WordPress and dedecms plug-ins. Because the payment is based on blockchain, for webmasters or webmasters, you will receive EAC instead of RMB, US dollars or euros. You need to exchange EAC into RMB at the exchange. Do not use if you mind.
+<br>
+<p>At present, all transactions supporting EAC are www.aex.com (need to climb the wall), www.aex.cash</p>
+<br>
+<p>Eacpay is a free, anonymous, ultra-low handling fee payment channel that the webmaster can control. Website users pay directly to the webmaster's EAC wallet without going through a third party and don't have to worry about deducting fees and running away; Moreover, there is no need for third-party audit, business license, ID card and domain name without filing; Without the complicated configuration of Alipay and WeChat, the configuration is super simple, provided that the EAC address can be provided. The payment amount is unlimited</ p>
+<br>
+<p>Disadvantages: payment confirmation is relatively centralized and payment is slow</p>
+<br>
+<h1>2. First, set a new integral type in "global" - > "integral setting". It is recommended to use RMB, USD, EUR, etc</h1>
+<br>
+<h1>3. Click settings in eacpay blockchain payment, and the settings are as follows:</h1>
+<p>3.1. Payment timeout: set according to the specific situation of your website, which means that the user must pay within this time when he initiates payment, otherwise the payment order fails</p>
+<p>3.2. EAC pricing benchmark exchange: it can be used by default at present</ p>
+<p>3.3. Allow cash withdrawal: decide whether to allow users to withdraw cash according to their own website operation</p>
+<p>3.4. Earthcoin blockchain browser: at present, there are two public blockchain browsers, and the speed is not guaranteed. It is recommended to build a self built blockchain browser, which is safer and faster. https://blocks.deveac.com:4000 (abroad); https://api.eacpay.com:9000 (domestic) < a href= https://eacpay.gitee.io/eacpayweb/build-earthcoin-brower.html >How to build your own earthcoin blockchain browser</a></p>
+<p>3.5. Pricing benchmark currency: determine which currency to use as the pricing currency of EAC. It is suggested to correspond to the point setting one by one. For example, if you want to create RMB for points setting, you can also select RMB here</p>
+<p>3.6. Recharge integral type: for the integral type in discuz that needs recharge, it is recommended to use the new integral type. Once set, do not change it at will, otherwise recharge and withdrawal will be affected</p>
+<p>3.7. Recharge ratio: suggestion 1. Once set, do not change it at will, otherwise recharge and cash withdrawal will be affected</p>
+<p>3.8. Collection address: the collection address here refers to the EAC address. You can download earthcoin's computer wallet or download eacpay to generate one. If you have multiple websites, please create a separate EAC address for each website. EAC is generated free of charge at any time. This is your collection account. Please do not fill it in incorrectly</ p>
+<p>3.9 confirmation quantity: the larger the value, the longer the recharge confirmation time. It is recommended that there be 3 (1-5 minutes) and no more than 10</p>
+<br>
+<h1>4. The recharge system will automatically confirm and automatically add the corresponding point type. If the payment recharge is inconsistent with the applied quantity, the webmaster needs to intervene manually</h1>
+<br>
+<h1>5. The withdrawal order needs to be manually operated by the webmaster or website administrator. The operation method is as follows:</h1>
+Click the withdrawal order, move the mouse to the order number / QR code, and the QR code will pop up. After the webmaster scans the QR code with eacpay and confirms the payment, click status and select paid in the pop-up menu to complete the withdrawal
+<h1>Eacpay official website: https://www.eacpay.com </h1>
+<h1>Gitee official website: https://eacpay.gitee.io/eacpayweb </h1>
+<h1>GitHub official website: https://vcexnet.github.io/eacpayweb </h1>
+<h1>Eacpay Twitter: https://t.me/eacpaydotcom </h1>
 <script>
 </script>
