--- a/SC_UTF8/cc_cansnow_eacpay/template/help.htm
+++ b/SC_UTF8/cc_cansnow_eacpay/template/help.htm
@@ -1,5 +1,33 @@
-<p>
-    奥术大师大Sgas董鹏飞hi奥十多个iouwhfu89ashuf8euu
-</p>
+<p><h1>1、eacpay简介</h1></p>
+eacpay是基于earthcoin区块链的支付应用，目前支持discuz、wordpress、dedecms插件。因为是基于区块链的支付，所以对于站长或者网站管理员来说，您将会收到eac,而非人民币或者美元、欧元，你需要到交易所将eac兑换成人民币即可。如果介意，请勿使用。
+<br>
+<p>目前支持eac的交易所有www.aex.com（需要翻墙）、www.aex.cash</p>
+<br>
+<p>eacpay支付是一款自由、匿名、超低手续费，且站长自己可以掌控的支付通道，网站用户支付直接到站长的eac钱包，无需经过第三方，不用担心扣费、跑路；更无需第三方审核，不用提供营业执照身份证、域名无需备案等；没有支付宝、微信繁杂的配置，配置超级简单，只要提供eac地址即可；支付金额无限制。</p>
+<br>
+<p>缺点：支付确认相对中心化支付慢</p>
+<br>
+<h1>2、首先在“全局”-->“积分设置”中设置一个全新的积分类型，建议名称使用RMB、USD、EUR等</h1>
+<br>
+<h1>3、点击EACPAY区块链支付中的设置，设置项目分别如下：</h1>
+<p>3.1、支付超时：根据自己网站具体情况设置，意思是用户发起支付必须要在这个时间内支付，否则支付订单失败</p>
+<p>3.2、EAC定价基准交易所：这个当前采用默认即可。</p>
+<p>3.3、是否允许提现：根据自己网站运营决定是否允许用户提现</p>
+<p>3.4、Earthcoin区块链浏览器：目前公共有两个，速度不保证，建议自建区块链浏览器，更安全更快。https://blocks.deveac.com:4000（国外）；https://api.eacpay.com:9000（国内）<a href=https://eacpay.gitee.io/eacpayweb/build-earthcoin-brower.html>如何自建earhcoin区块链浏览器</a></p>
+<p>3.5、定价基准币种：确定使用什么币种作为eac的定价币种，建议和积分设置一一对应。比如积分设置新建RMB，这里也选择人民币</p>
+<p>3.6、充值积分类型：需要充值的discuz内积分类型，建议使用新建的积分类型，一旦设置请勿随意更改，否则影响充值和提现</p>
+<p>3.7、充值比例：建议1，一旦设置请勿随意更改，否则影响充值和提现</p>
+<p>3.8、收款地址：这里的收款地址是指EAC地址，可以下载earthcoin的电脑钱包或者下载eacpay生成一个即可，如果你有多个网站，请为每一个网站单独创建一个eac地址。eac随时免费生成。这就是你的收款账户，请勿填写错误。</p>
+<p>3.9、确认数量：数值越大，充值确认需要的时间越长，建议3个（1-5分钟），不超过10个</p>
+<br>
+<h1>4、充值系统将会自动确认，自动增加对应积分类型，如果遇到支付充值和申请的数量不一致，需要站长手工干预</h1>
+<br>
+<h1>5、提现订单需要站长或者网站管理员手工操作，手工转账给提现申请人，操作方法如下：</h1>
+点击提现订单，鼠标移动到订单号/二维码上，系统会弹出二维码。站长用eacpay扫描二维码支付确认后，点击状态，弹出的菜单中选择已支付即可完成提现
+
+<h1>eacpay官网：https://www.eacpay.com</h1>
+<h1>Gitee官网：https://eacpay.gitee.io/eacpayweb</h1>
+<h1>Github官网：https://vcexnet.github.io/eacpayweb</h1>
+<h1>eacpay推特：https://t.me/eacpaydotcom</h1>
 <script>
 </script>
