--- a/TS_UTF8/cc_cansnow_eacpay/template/help.htm
+++ b/TS_UTF8/cc_cansnow_eacpay/template/help.htm
@@ -1,5 +1,32 @@
-<p>
-    奧術大師大Sgas董鵬飛hi奧十多個iouwhfu89ashuf8euu
-</p>
+<p><h1>1、eacpay簡介</h1></p>
+eacpay是基於earthcoin區塊鏈的支付應用，現時支持discuz、wordpress、dedecms挿件。 因為是基於區塊鏈的支付，所以對於站長或者網站管理員來說，您將會收到eac，而非人民幣或者美元、歐元，你需要到交易所將eac兌換成人民幣即可。 如果介意，請勿使用。
+<br>
+<p>現時支持eac的交易所有www.aex.com（需要翻牆）、www.aex.cash</p>
+<br>
+<p>eacpay支付是一款自由、匿名、超低手續費，且站長自己可以掌控的支付通道，網站用戶支付直接到站長的eac錢包，無需經過協力廠商，不用擔心扣費、跑路； 更無需協力廠商稽核，不用提供營業執照身份證、功能變數名稱無需備案等； 沒有支付寶、微信繁雜的配寘，配寘超級簡單，只要提供eac地址即可； 支付金額無限制。</ p>
+<br>
+<p>缺點：支付確認相對中心化支付慢</p>
+<br>
+<h1>2、首先在“全域”-->“積分設定”中設定一個全新的積分類型，建議名稱使用RMB、USD、EUR等</h1>
+<br>
+<h1>3、點擊EACPAY區塊鏈支付中的設定，設定項目分別如下：</h1>
+<p>3.1、支付超時：根據自己網站具體情況設定，意思是用戶發起支付必須要在這個時間內支付，否則支付訂單失敗</p>
+<p>3.2、EAC定價基準交易所：這個當前採用默認即可。</ p>
+<p>3.3、是否允許提現：根據自己網站運營决定是否允許用戶提現</p>
+<p>3.4、Earthcoin區塊鏈瀏覽器：現時公共有兩個，速度不保證，建議自建區塊鏈瀏覽器，更安全更快。 https://blocks.deveac.com:4000 （國外）； https://api.eacpay.com:9000 （國內）<a href= https://eacpay.gitee.io/eacpayweb/build-earthcoin-brower.html >如何自建earhcoin區塊鏈瀏覽器</a></p>
+<p>3.5、定價基準幣種：確定使用什麼幣種作為eac的定價幣種，建議和積分設定一一對應。 比如積分設定新建RMB，這裡也選擇人民幣</p>
+<p>3.6、充值積分類型：需要充值的discuz內積分類型，建議使用新建的積分類型，一旦設定請勿隨意更改，否則影響充值和提現</p>
+<p>3.7、充值比例：建議1，一旦設定請勿隨意更改，否則影響充值和提現</p>
+<p>3.8、收款地址：這裡的收款地址是指EAC地址，可以下載earthcoin的電腦錢包或者下載eacpay生成一個即可，如果你有多個網站，請為每一個網站單獨創建一個eac地址。 eac隨時免費生成。 這就是你的收款帳戶，請勿填寫錯誤。</ p>
+<p>3.9、確認數量：數值越大，充值確認需要的時間越長，建議3個（1-5分鐘），不超過10個</p>
+<br>
+<h1>4、充值系統將會自動確認，自動新增對應積分類型，如果遇到支付充值和申請的數量不一致，需要站長手工干預</h1>
+<br>
+<h1>5、提現訂單需要站長或者網站管理員手工操作，手工轉帳給提現申請人，操作方法如下：</h1>
+點擊提現訂單，滑鼠移動到訂單號/二維碼上，系統會彈出二維碼。 站長用eacpay掃描二維碼支付確認後，點擊狀態，彈出的選單中選擇已支付即可完成提現
+<h1>eacpay官網： https://www.eacpay.com </h1>
+<h1>Gitee官網： https://eacpay.gitee.io/eacpayweb </h1>
+<h1>Github官網： https://vcexnet.github.io/eacpayweb </h1>
+<h1>eacpay推特： https://t.me/eacpaydotcom </h1>
 <script>
 </script>
